# Utilities

./: .gitignore  README.md
DevControl/: README.md  ai_engine.py  app.py  benchmark.cpp  database.py  db.py  dummy.txt  extract_code_from_logs.py  extract_from_log.py  extract_ui_app.py  extracted_chunk.txt  find_any_metrics_copy.py  find_server_versions.py  inspect_metrics_occurrences.py  inspect_telemetry_js.py  metrics.py  recover_all_untruncated.py  run_integration_tests.py  search_all_transcripts.py  server.py  test_print.cpp  test_server_endpoints.py
DevControl/ui/: app.js  index.html  style.css
DevControl/ui/modules/: apis.js  benchmarks.js  charts.js  chat.js  docker.js  logs.js  processes.js  settings.js  state.js  tabs.js  telemetry.js  utils.js
DownloadManager/: .gitignore  build_installer.ps1  cleaned_failed.csv  cleaned_failed_downloads.csv  download_manager_gui.py  failcheckers.py  failed.csv  failed_downloads.csv  filerunn.py  launch_download_manager_gui.bat  musicscript.py  musicscript_legacy_yt_dlp.py  playlist.csv  readme.md  requirements.txt  setup.py  youtube_video_downloader.py
DownloadManager/gui/: __init__.py  backend.py  main_window.py  settings_tab.py  setup_wizard.py  spotify_tab.py  theme.py  youtube_tab.py
DownloadManager/installer/: LICENSE.rtf  README.txt
FileFinder/: build.bat  convert_assets.py
FileFinder/src/: gui.cpp  gui.h  main.cpp  resource.h  resources.rc  search_engine.cpp  search_engine.h
Focus/: Impromnets.md  README.md  build.bat  instruction.md  run_focus_engine.bat  start_session.py  test_pipe.py
Focus/src/: generate_icon.py  main.cpp  resource.rc  resource.res
Focus/src/common/: config.cpp  config.h  ipc.h  state.cpp  state.h  utils.cpp  utils.h
Focus/src/daemon/: blocking.cpp  blocking.h  engine.cpp  engine.h  main.cpp
Focus/src/tray/: gui.cpp  gui.h  main.cpp
Focus/src/watchdog/: main.cpp
LiveWallpaper/: .gitignore  BUILD_TEST_GUIDE.md  CMakeLists.txt  README.md  build.bat  gui_convert.py  package.ps1
LiveWallpaper/conversion_tool/: README.md  convert.py
LiveWallpaper/live_wallpaper_rust/: Cargo.toml
LiveWallpaper/live_wallpaper_rust/src/: lib.rs
LiveWallpaper/src/: config.cpp  config.h  device_manager.cpp  device_manager.h  explorer_integration.cpp  explorer_integration.h  ffi_shader_bridge.cpp  ffi_shader_bridge.h  main.cpp  playlist_dialog.cpp  playlist_dialog.h  playlist_manager.cpp  playlist_manager.h  power_monitor.cpp  power_monitor.h  render_engine.cpp  render_engine.h  render_state_machine.h  render_thread_controller.cpp  render_thread_controller.h  renderer.cpp  renderer.h  spsc_ring_buffer.h  swap_chain_manager.cpp  swap_chain_manager.h  synchronization_manager.cpp  synchronization_manager.h  timer.cpp  timer.h  tray_icon.cpp  tray_icon.h  utils.cpp  utils.h  video_decoder.cpp  video_decoder.h  video_renderer.cpp  video_renderer.h  wallpaper_host.cpp  wallpaper_host.h
LiveWallpaper/tests/: basic_test.cpp
MusicPlayer/: README.md  build.bat  installer.nsi  lastfolder.txt
MusicPlayer/src/: AudioEngine.cpp  AudioEngine.h  Database.cpp  Database.h  PlayerGUI.cpp  PlayerGUI.h  Shuffler.cpp  Shuffler.h  main.cpp  resource.rc  resource.res
New folder/: CMakeLists.txt  Instruction.md  README.md  build.bat
New folder/config/: default_config.toml
New folder/res/: app.rc  resource.h
New folder/src/: config.cpp  config.h  main.cpp  power_monitor.cpp  power_monitor.h  renderer.cpp  renderer.h  telemetry.h  timer.cpp  timer.h  utils.h  video_decoder.cpp  video_decoder.h  wallpaper_host.cpp  wallpaper_host.h
PdfEditor/: CMakeLists.txt  Instruction.MD  Phase3_Handoff.md  Phase4_Handoff.md  README.md  out.txt
PdfEditor/src/: main.cpp  resources.rc
PdfEditor/src/core/: ModifyTextCommand.cpp  ModifyTextCommand.h  OverlayItem.cpp  OverlayItem.h  OverlayModel.cpp  OverlayModel.h  PdfCore.cpp  PdfCore.h  PdfExporter.cpp  PdfExporter.h  PdfTextEngine.cpp  PdfTextEngine.h  TextSelectionModel.cpp  TextSelectionModel.h
PdfEditor/src/qml/: HighlightOverlayItem.qml  Main.qml  TextOverlayItem.qml
PdfEditor/src/rendering/: RenderEngine.cpp  RenderEngine.h  TileCache.cpp  TileCache.h
PdfEditor/src/ui/: PdfExportWorker.cpp  PdfExportWorker.h  PdfView.cpp  PdfView.h
PdfEditor/tests/: test_pdf_core.cpp  test_pdf_exporter.cpp
QuickFinder/: README.md  build.bat  convert_assets.py  stress_test.cpp
QuickFinder/src/: gui.cpp  gui.h  main.cpp  search_engine.cpp  search_engine.h  word_finder_engine.cpp  word_finder_engine.h
RagStudy/: README.md  requirements.txt  run.py  start.bat
RagStudy/backend/: __init__.py  agent.py  app.py  config.py  document_processor.py  fine_tuner.py  local_llm.py  models.py  vector_store.py
RagStudy/frontend/: index.html  package-lock.json  package.json
RagStudy/frontend/src/: App.css  App.jsx  index.css
RagStudy/frontend/src/cards/: StudyCard.jsx
RagStudy/frontend/src/components/: ChatHub.jsx  DocManager.jsx  SettingsBar.jsx
Reminder/: Cargo.toml  Instruction.md  README.md  build.rs  how to setup.md
Reminder/reminders/: reminders.json  settings.json
Reminder/src/: main.rs
Reminder/src/core/: config.rs  history.rs  mod.rs  storage.rs
Reminder/src/notification/: editor.rs  mod.rs  popup.rs
Reminder/src/scheduler/: engine.rs  mod.rs
Reminder/src/utils/: mod.rs
Reminder/ui/: editor.slint  popup.slint
Tracker/: Cargo.toml  Instruction.md  README.md  build.rs  config.default.toml
Tracker/src/: main.rs
Tracker/src/modules/: analytics.rs  config_manager.rs  foreground_tracker.rs  idle_detector.rs  logger.rs  mod.rs  process_events.rs  session_cache.rs  shutdown_handler.rs  sqlite_logger.rs  tracker_core.rs  tray_ui.rs
