[package]
name = "reminder-app"
version = "1.0.0"
edition = "2021"
description = "A lightweight native desktop Reminder Popup application built with Rust and Slint UI framework"
authors = ["Reminder App"]

[dependencies]
# UI framework — lightweight native rendering
slint = "1.9"

# Async runtime removed for minimal RAM usage

# Serialization for JSON storage
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# System tray support on Windows
tray-icon = "0.19"
winit = { version = "0.30", features = ["rwh_06"] }

# Image handling
image = "0.25"

# Logging
log = "0.4"
env_logger = "0.11"

# Unique IDs
uuid = { version = "1", features = ["v4"] }

# Directory utilities
directories = "6"

[build-dependencies]
slint-build = "1.9"
winres = "0.1"

[profile.release]
opt-level = "z"        # Optimize for size
lto = true             # Link-time optimization
codegen-units = 1      # Single codegen unit for best optimization
strip = true           # Strip debug symbols
panic = "abort"        # Abort on panic (smaller binary)
