[package]
name = "tracker"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Windows APIs
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemInformation",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader",
    "Win32_UI_Controls_Dialogs",
    "Win32_Security",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# System tray
tray-icon = "0.19"

# Config
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Misc
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Enable Link Time Optimization
codegen-units = 1    # Reduce parallel codegen units to increase optimizations
panic = "unwind"      # Unwind on panic to capture logs
strip = true         # Strip symbols

